oidc-client-demo/service-demo-resare-com.yaml
# Source: demo.resare.com
apiVersion: v1
kind: Service
metadata:
  name: demo-resare-com
  namespace: oidc-client-demo
spec:
  selector:
    app: demo-resare-com
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
